deploy/backend-api/tstream_backendapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: news-stream
  name: tstream-backendapi
  labels:
    app: news-stream
    component: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-stream
      component: backend-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
      labels:
        app: news-stream
        component: backend-api
    spec:
      containers:
        - name: tstream-backendapi
          image: harbor.ww.home/dojo/news-streams:django-76
          ports:
            - name: readiness-port
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: readiness-port
            failureThreshold: 2
            initialDelaySeconds: 10
            periodSeconds: 30

          command:
            - python3
          args:
            - /src/manage.py
            - runserver
            - 0.0.0.0:8000
