deploy/backend-api/tstream_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tstream-backendapi-service
  namespace: news-stream
  labels:
    app: news-stream
    component: backend-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: news-stream
    component: backend-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tstream-backendapi-ingress
  namespace: news-stream
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - news-stream.spookyai.com
      secretName: news-stream-spookyai-tls
  rules:
    - host: news-stream.spookyai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tstream-backendapi-service
                port:
                  number: 80
